# Personal-Markdowns

./: .gitignore  DEMO.md  Dissertation_Abstract_Outline_Arpan_Ghosh.docx  MID_SEM_REPORT_Arpan_Ghosh.md  Outline_Viva_Arpan_Ghosh.pptx  Viva_Speaker_Notes_and_QA.md  pyproject.toml  requirements.txt
causa/: .env.example  .gitignore  README.md  pyproject.toml
causa/data/: demo_tasks.jsonl
causa/docs/: explanation.html
causa/docs/wiki/: WIKI.md  index.html
causa/docs/wiki/diagrams/: 01-system-overview.html  02-debugging-scm.html  03-do-calculus-pipeline.html  04-causal-planning-agent.html  05-ablation-arms.html  06-counterfactual-reflection.html  07-distribution-shift-partition.html  08-trace-event-flow.html  09-cold-start-vs-steady.html  10-evaluation-runner.html  11-bca-permutation-stats.html  12-llm-graph-extraction.html  13-end-to-end-data-flow.html  14-four-components.html  15-dissertation-roadmap.html  _shared.css
causa/experiments/: baseline_experiment.py
causa/experiments/results/: baseline_20260620_135903.json  baseline_20260620_140419.json  baseline_20260620_140507.json  baseline_openai_20260620_145137.json  baseline_openai_20260621_000541.json
causa/notebooks/: causa_demo.ipynb  make_demo_nb.py
causa/src/causa/: __init__.py
causa/src/causa/adapters/: __init__.py
causa/src/causa/adapters/estimators/: __init__.py  factory.py  linear_regression.py  propensity_score.py
causa/src/causa/adapters/history/: __init__.py  pandas_history.py
causa/src/causa/adapters/llm/: __init__.py  anthropic_client.py  factory.py  mock_client.py  openai_client.py
causa/src/causa/agents/: __init__.py  base.py  causal.py  chain_of_thought.py  no_memory.py  react.py
causa/src/causa/cli/: __init__.py  main.py  runtime.py
causa/src/causa/config/: __init__.py  settings.py
causa/src/causa/core/: __init__.py  graph.py  identifiability.py  intervention.py  scm.py
causa/src/causa/domain/: __init__.py  scm_debugging.py  tasks.py
causa/src/causa/evaluation/: __init__.py  metrics.py  partition.py  runner.py  stats.py  swebench.py
causa/src/causa/extraction/: __init__.py  llm_extractor.py
causa/src/causa/planning/: __init__.py  dowhy_scorer.py  hybrid_scorer.py  llm_scorer.py  warm_start.py
causa/src/causa/ports/: __init__.py  estimator.py  history.py  llm.py  scorer.py  tool.py
causa/src/causa/reflection/: __init__.py  counterfactual.py  threshold.py
causa/src/causa/telemetry/: __init__.py  auditor.py  events.py  writer.py
causa/tests/: conftest.py
causa/tests/integration/: test_dowhy_roundtrip.py
causa/tests/unit/: test_agents.py  test_extraction.py  test_graph.py  test_history.py  test_identifiability.py  test_intervention.py  test_partition.py  test_reflection.py  test_runner.py  test_scm.py  test_scm_debugging.py  test_stats.py  test_telemetry.py  test_warm_start.py
(+3 files in other folders)
